syntax = "proto3";

package configuration;

option java_package = "Location";
option java_multiple_files = true;

service LocationService{
    rpc addLocation(LocationObject) returns (resp);

    rpc deleteLocation(idObj) returns(resp);
    rpc getLocation (idObj) returns (LocationObject);
}

message LocationObject {
    string id = 1;
    double latitude=2;
    double longitude=3;
    string city=4;
    string country=5;

}
message Empty{

}
message resp{
    int32 code=1;
}
message timeObj{
    //to do
}

message idObj{
    string id=1;
}



