///////////////////////////////////////////////////////////////////////deactivated  - do nothing


syntax = "proto3";

package configuration;

option java_package = "profile";
option java_multiple_files = true;

message ProfileObject {
    string firstName = 1;
    string lastName = 2;
    int32 age = 3;
}

message ProfileRequest {
    string id = 1;
}

message ProfileResponse {
    ProfileObject profile = 1;
}

service ProfileService {
    rpc getProfile(ProfileRequest) returns (ProfileResponse);
}